--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,37 +23,40 @@
     <Button
         android:id="@+id/us"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:text="United States"
-        android:backgroundTint="#03A9F4"/>
+        android:backgroundTint="#03A9F4"
+        android:textSize="25sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+
 
     <Button
         android:id="@+id/canada"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:text="Canada"
-        android:backgroundTint="#E8799F"/>
+        android:backgroundTint="#E8799F"
+        android:textSize="25sp"
+        android:layout_marginBottom="20dp"/>
 
     <Button
         android:id="@+id/mexico"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:text="Mexico"
-        android:backgroundTint="#4CAF50"/>
+        android:backgroundTint="#4CAF50"
+        android:textSize="25sp"
+        android:layout_marginBottom="20dp"/>
 
-    <Button
-        android:id="@+id/settings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:backgroundTint="#9C27B0"/>
+
 
     <TextView
         android:id="@+id/percent_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0/95"
-        android:textSize="50sp"
+        android:textSize="60sp"
         android:textColor="#FFFFFF"
         android:gravity="center"
         android:textStyle="bold"/>
