The reset button is fixed and everything works. The app is basically finished

--- a/app/src/main/res/layout/activity_mexico.xml
+++ b/app/src/main/res/layout/activity_mexico.xml
@@ -92,7 +92,7 @@
                         android:background="#4CAF50"/>
 
                     <CheckBox
-                        android:id="@+id/check_bc"
+                        android:id="@+id/check_bcm"
                         android:layout_width="wrap_content"
                         android:layout_height="88dp"
                         android:text="Baja California"
